@@ -24,7 +24,7 @@
 		<input type="password" name="pw1" id="pw1" value="engfeh" />
 		<input type="password" name="pw2" id="pw2" value="" />
 	</div>
-	<div id="main" style="display:none;">
+	<div id="main" style="position: absolute; top: -10000px; left: -10000px;">
 		<p id="firstp">See <a id="simon1" href="http://simon.incutio.com/archive/2003/03/25/#getElementsBySelector" rel="bookmark">this blog entry</a> for more information.</p>
 		<p id="ap">
 			Here are some links in a normal paragraph: <a id="google" href="http://www.google.com/" title="Google!">Google</a>, 
