@@ -11,6 +11,7 @@
 * Renamed phone-method in additional-methods.js to phoneUS
 * Added phoneUK and mobileUK methods to additional-methods.js (http://plugins.jquery.com/node/12359)
 * Deep extend options to avoid modifying multiple forms when using the rules-method on a single element (http://plugins.jquery.com/node/12411)
+* Bugfixes for compability with jQuery 1.4.2, while maintaining backwards-compability
 
 1.6
 ---
